--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
     <pre>
 ╔════════╗
 ║ HALDRU ║
-╚════════╝<!--
-  ==> <a href="">...</a>
--->
+╚════════╝
+
+  ==> <a href="https://raw.githubusercontent.com/haldru/Reske2015/master/data/gnd.json">Reske2015 (GND)</a>
+  ==> <a href="https://raw.githubusercontent.com/haldru/Paisey1988/master/data/gnd.json">Paisey1988 (GND)</a>
+  ==> <a href="https://raw.githubusercontent.com/haldru/Benzing1982/master/data/gnd.json">Benzing1982 (GND)</a>
+  ==> <a href="https://raw.githubusercontent.com/haldru/Benzing1977/master/data/gnd.json">Benzing1977 (GND)</a>
+
 </pre>
   </body>
 </html>
