--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 ║ HALDRU ║
 ╚════════╝
 
-  GND entities
+  GND identifiers
 
     ==> <a href="https://raw.githubusercontent.com/haldru/Reske2015/master/data/gnd.json">Reske2015</a>
     ==> <a href="https://raw.githubusercontent.com/haldru/Paisey1988/master/data/gnd.json">Paisey1988</a>
