--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   GND identifiers
 
     ==> <a href="https://raw.githubusercontent.com/haldru/Reske2015/master/data/gnd.json">Reske2015</a>
+    ==> <a href="https://raw.githubusercontent.com/haldru/Paisey1989/master/data/gnd.json">Paisey1989</a>
     ==> <a href="https://raw.githubusercontent.com/haldru/Paisey1988/master/data/gnd.json">Paisey1988</a>
     ==> <a href="https://raw.githubusercontent.com/haldru/Benzing1982/master/data/gnd.json">Benzing1982</a>
     ==> <a href="https://raw.githubusercontent.com/haldru/Benzing1977/master/data/gnd.json">Benzing1977</a>
